# LIM-pylim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
docs/: conf.py  index.rst  pylim.bib  setup.rst
docs/_build/doctrees/: api_documentation.doctree  environment.pickle  index.doctree  references.doctree  setup.doctree
docs/_build/html/: .buildinfo  api_documentation.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  setup.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pylim/: bacardi.html  bahamas.html  ecrad.html  helpers.html  libradtran.html  meteorological_formulas.html  reader.html  smart.html  solar_position.html
src/pylim/: bacardi.py  bahamas.py  cirrus_hl.py  ecrad.py  halo_ac3.py  helpers.py  libradtran.py  meteorological_formulas.py  reader.py  smart.py  solar_position.py
src/pylim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
