# pyproject.toml

[project]
name = "pylim"
version = "1.4.5"
description = "Useful functions, tools and metadata used at the Leipzig Institute for Meteorology"
readme = "README.md"
authors = [{ name = "Johannes Röttenbacher", email = "johannes.roettenbacher@uni-leipzig.de" },
    { name = "Hanno Müller" },
    { name = "André Ehrlich" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["meteorology", "Leipzig", "tools"]
dependencies = [
    "pandas",
    "numpy",
    "toml",
    "matplotlib",
    "scipy",
    "xarray",
    "tqdm",
    "joblib",
    "pysolar",
    "geopy",
    "cmasher",
    "importlib_resources",
    "cartopy",
    "holoviews"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bumpver", "isort",
    "pip-tools", "pytest",
    "sphinx", "sphinx_rtd_theme", "sphinxcontrib.bibtex", "sphinx-copybutton"
]

[project.urls]
GitHub = "https://github.com/radiation-lim/LIM-pylim"
Documentation = "https://radiation-lim.github.io/LIM-pylim/"

[tool.setuptools.packages.find]
where = ["src"]
